# ship_painter

./: .gitignore  CMakeLists.txt  README_MAPPING.md  package.xml  readme.txt
VINS-Fusion/config/realsense_d455f/: left.yaml  realsense_stereo_imu_config.yaml
VINS-Fusion/config/simulation/: cam0_pinhole.yaml  cam1_pinhole.yaml  simulation_config.yaml
VINS-Fusion/loop_fusion/: CMakeLists.txt
VINS-Fusion/vins_estimator/: CMakeLists.txt
config/: spray_params.yaml
docs/: pilot_handoff.md
include/plan_env/: grid_map.h
include/ship_painter/: bspline.h  dataset_collector.h  mdob_estimator.h  path_planner.h
launch/: boat copy.launch  boat.launch  boat1.launch  boat2.launch  boat_mpc.launch  display.launch  disturbance.launch  mapping.launch  mpc_test.launch  run_d455.launch  run_fusion.launch  true.launch  true2.launch  true3.launch  true4.launch
launch/others/: boat.launch.backup  boat1.launch
launch/testlaunch1/: 1boat1.launch  1boat2.launch  boat3.launch  boat_large.launch  intelligent_spray.launch  ship_painter.launch  ship_painter2.launch  ship_painter_with_vision.launch  simulation.launch  spray_painter_improved.launch  test.launch  test2.launch  test3.launch
models/: S5_1.ply  S5_2.ply  S5_3.ply  S5_4.ply  S5_4.sdf  S5_4.stl  S5_4_mesh.ply  _model1.stl  box.stl  box_model.sdf  iris_vins_fusion.sdf  iris_with_sensors.sdf  model4cube.dae  model4cube.sdf  model4cube.stl  model_for_demo.dae  model_for_demo.sdf  model_for_demo.stl  model_for_lab.stl  model_for_test.dae  model_for_test.sdf  model_for_test.stl  model_for_test2.dae  model_for_test2.sdf  model_for_test2.stl  model_for_test2_textured.mtl  s101.ply  s101.sdf  s101.stl  s101_mesh.ply  s103.ply  s201.ply  ship_model.stl  tall.sdf  tall.stl  test.dae  test.sdf  test.stl  test_box.stl
models/boat1/: boat1.config  boat1.sdf  model.config  model.sdf
models/boat1/meshes/: boat1.dae  boat1.stl
models/iris_with_camera/: model.sdf
models/large_boat/: model.config  model.sdf
models/large_boat/meshes/: boat.stl
models/linshi/: test.sdf
models/textures/: checkerboard_material.material
mpc_gen/: acados_ocp.json  generate_mpc.py
mpc_gen/c_generated_code/: acados_sim_solver_ship_painter_mpc.h  acados_solver_ship_painter_mpc.c  main_sim_ship_painter_mpc.c
mpc_gen/c_generated_code/ship_painter_mpc_cost/: ship_painter_mpc_cost_y_0_fun.c  ship_painter_mpc_cost_y_fun_jac_ut_xt.c  ship_painter_mpc_cost_y_hess.c
mpc_gen/c_generated_code/ship_painter_mpc_model/: ship_painter_mpc_expl_vde_adj.c  ship_painter_mpc_expl_vde_forw.c  ship_painter_mpc_model.h
msg/: Bspline.msg  BsplineLayer.msg
rviz/: intelligent_spray.rviz  path_visualization.rviz  ship_painter.rviz  ship_painter_VINS.rviz  true_ship_painter.rviz
shfiles/: batch_record.sh  record_sim_bag.sh  rspx4.sh
src/: body_force_plugin.cpp  bspline.cpp  depth_test_node.cpp  main_ship_painter_mpc.c  mapping_node.cpp  mpc_runner_node.cpp  mpc_trajectory_tester_node.cpp  path_planner.cpp  realtest_node.cpp  ship_painter_node.cpp  thrust_mapper_node.cpp  trajectory_server_node.cpp  vins_to_mavros_bridge.cpp  wall_horizontal_node.cpp  wall_zigzag_node.cpp  world_wind_plugin.cpp
src/mpc/: acados_sim_solver_ship_painter_mpc.c  acados_solver.pxd  acados_solver_ship_painter_mpc.c  dataset_collector.cpp  mdob_estimator.cpp
src/mpc/c_generated_code/: Makefile  acados_solver_ship_painter_mpc.c  acados_solver_ship_painter_mpc.h
src/mpc/c_generated_code/ship_painter_mpc_cost/: ship_painter_mpc_cost.h  ship_painter_mpc_cost_y_fun.c
src/mpc/c_generated_code/ship_painter_mpc_model/: ship_painter_mpc_expl_ode_fun.c  ship_painter_mpc_expl_vde_adj.c
src/mpc/ship_painter_mpc_cost/: ship_painter_mpc_cost_y_e_fun.c  ship_painter_mpc_cost_y_e_fun_jac_ut_xt.c
src/mpc/ship_painter_mpc_model/: ship_painter_mpc_expl_vde_forw.c
src/plan_env/: grid_map.cpp
src/ship_painter_mpc_cost/: ship_painter_mpc_cost_y_0_fun_jac_ut_xt.c  ship_painter_mpc_cost_y_0_hess.c  ship_painter_mpc_cost_y_e_hess.c
tmp/: uav_disturbance_dataset.csv
tools/: make_pilot_viewer.py  make_zigzag_wall.py  waypoints_to_qgc_plan.py
worlds/: light.world  ship.world  ship_simple.world  ship_wall.world  ship_wall2.world
