<?xml version="1.0"?>
<package format="2">
  <name>ship_painter</name>
  <version>0.0.0</version>
  <description>Path planning and control for UAV ship painting</description>

  <maintainer email="demo@todo.todo">demo</maintainer>
  <license>Apache 2.0</license>
  <url type="website">http://wiki.ros.org/ship_painter</url>
  <author email="demo@todo.todo">Demo User</author>

  <!-- 必须添加的构建工具依赖 -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- 编译时依赖 -->
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>mavros_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  
  <!-- 添加 PCL 和 Eigen3 系统依赖 -->
  <build_depend>libpcl-dev</build_depend>
  <build_depend>libeigen3-dev</build_depend>
  <build_depend>libvtk7-dev</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <!-- 运行时依赖 -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>mavros_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  
  <!-- 添加系统库运行时依赖 -->
  <exec_depend>libpcl-dev</exec_depend>
  <exec_depend>libeigen3-dev</exec_depend>
  <exec_depend>libvtk7-dev</exec_depend>

  <!-- 导出依赖（供其他包使用） -->
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>mavros_msgs</build_export_depend>
  <build_export_depend>visualization_msgs</build_export_depend>
  <build_export_depend>pcl_ros</build_export_depend>
  <build_export_depend>pcl_conversions</build_export_depend>
  <build_export_depend>tf2</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <build_export_depend>tf2_geometry_msgs</build_export_depend>
  
  
  <!-- 添加系统库导出依赖 -->
  <build_export_depend>libpcl-dev</build_export_depend>
  <build_export_depend>libeigen3-dev</build_export_depend>

  <build_depend>gazebo_msgs</build_depend>
  <build_export_depend>gazebo_msgs</build_export_depend>
  <exec_depend>gazebo_msgs</exec_depend>

  <!-- 必须添加的导出标记 -->
  <export>
    <build_type>catkin</build_type>
  </export>
</package>
